--- a/Cuisine/Views/Shared/_Layout.cshtml
+++ b/Cuisine/Views/Shared/_Layout.cshtml
@@ -29,35 +29,14 @@
     </div>
 
     <div class="container-fluid">
-      <div class="sidebar">
-        <div class="well">
-          <h5>Sidebar</h5>
-          <ul>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-          </ul>
-          <h5>Sidebar</h5>
-          <ul>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-          </ul>
-          <h5>Sidebar</h5>
-          <ul>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-          </ul>
-        </div>
-      </div>
+        <div class="sidebar">
+            <div class="well">
+                @Html.Action("CategoryMenu", "Store")  
+            </div>
+            </div>
       <div class="content">
         <!-- Main hero unit for a primary marketing message or call to action -->
-        @RenderBody();
-
+        @RenderBody()
         <div id="footer">
           <p>© Company 2011</p>
         </div>
