--- a/Cuisine/Views/Store/Browse.cshtml
+++ b/Cuisine/Views/Store/Browse.cshtml
@@ -4,16 +4,16 @@
     ViewBag.Title = "Browse Products";
 }
  
-<div class="genre">
+<div class="well">
     <h3><em>@Model.Name</em> Products</h3>
  
     <ul id="album-list">
-        @foreach (var album in Model.Products)
+        @foreach (var product in Model.Products)
         {
             <li>
-                <a href="@Url.Action("Details", new { id = album.ProductId })">
-                    <img alt="@album.Name" src="@album.ProductImageUrl" />
-                    <span>@album.Name</span>
+                <a href="@Url.Action("Details", new { id = product.ProductId })">
+                    <img alt="@product.Name" src="@product.ProductImageUrl" />
+                    <span>@product.Name</span>
                 </a>
             </li>
         }
