--- a/Cuisine/Views/Home/Index.cshtml
+++ b/Cuisine/Views/Home/Index.cshtml
@@ -1,16 +1,14 @@
 ﻿@model List<Cuisine.Models.Product>
 @{
-    ViewBag.Title = "ASP.NET MVC Music Store";
+    ViewBag.Title = "South Bridge Charcoal Grill- Halal";
 }
 <div id="promotion">
 </div>
-
 <div class="hero-unit">
           <h1>Hello, world!</h1>
           <p>Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
           <p><a class="btn primary large">Learn more »</a></p>
         </div>
-
         <!-- Example row of columns -->
         <div class="row">
                 @foreach (var album in Model)
@@ -22,7 +20,6 @@
                     </div>  
                 }
             </div>
-        
 <div id="promotion">
 </div>
 
