--- a/Cuisine/Views/Shared/_Layout.cshtml
+++ b/Cuisine/Views/Shared/_Layout.cshtml
@@ -4,6 +4,8 @@
         <title>@ViewBag.Title</title>
         <link href="@Url.Content("~/Content/template.css")" rel="stylesheet" 
               type="text/css" />
+        <script src="../../Scripts/Cuisine/Cuisine.js" type="text/javascript"></script>
+        <script src="../../Scripts/jquery-1.5.1.min.js" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/jquery-1.4.4.min.js")" 
                 type="text/javascript"></script>
         <style type="text/css">
@@ -33,12 +35,12 @@
 			</div>
 		<div style="clear:both;"></div>
 		<br/>
-		<div id="header">
+		@*<div id="header">
 		<div id="inheader"><h1>South Bridge Charcoal Grill</h1></div>
-		</div>
+		</div>*@
             <div id="content">
                 @RenderBody()
-                <h2>Dolor Sit</h2>
+    @*            <h2>Dolor Sit</h2>
                 <p class="pcontent">
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
                     <span class="readmore"><a href="/">Read more...</a></span>  
@@ -50,7 +52,7 @@
                 <h2>Vel Illum</h2>
                 <p class="pcontent">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse
                     <span class="readmore"><a href="http://www.http://www.ceb-seo.de/online-marketing-agentur.html">Read more...</a></span>	
-                </p>		
+                </p>		*@
             </div>
 			<div style="clear:both;"></div>
 			<div id="contentbottom">
