--- a/Cuisine/Views/Order/Index.cshtml
+++ b/Cuisine/Views/Order/Index.cshtml
@@ -2,8 +2,8 @@
 
 @{
     ViewBag.Title = "Index";
-    //Layout = "~/Views/Shared/_Layout.cshtml";
- //Layout = "";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    //Layout = "";
 }
 
 <script type="text/javascript">
