--- a/Cuisine/Views/Shared/_Layout.cshtml
+++ b/Cuisine/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />    
     <script src="../../Scripts/jquery-1.7.1.min.js" type="text/javascript"></script>
     <script src="../../Scripts/Cuisine/Cuisine.js" type="text/javascript"></script>
+    <script src="../../Scripts/jquery.blockUI.js" type="text/javascript"></script>
 
 	<link rel="stylesheet" type="text/css" href="../../Content/styles.css" media="screen" />
 	<title>@ViewBag.Title</title>
