--- a/Cuisine/Views/Order/Index.cshtml
+++ b/Cuisine/Views/Order/Index.cshtml
@@ -84,7 +84,7 @@
                                                 <div style="float: right;">£</div>
                                         </td>
 						                <td class="prdPlus">
-                                            <img alt="Click For Order" class="PlusMC" onclick="UpdateBasket(@product.ProductId);" src="../../Content/Images/button-plus.gif" style="border-width:0px;"/>
+                                            <img alt="Click For Order" class="PlusMC" onclick="UpdateBasket(@product.ProductId);" src="../../Content/Images/add.gif" style="border-width:0px;"/>
                                         </td>
 					                </tr>
                                     <tr></tr>
