--- a/Cuisine/Views/Order/ShoppingCart.cshtml
+++ b/Cuisine/Views/Order/ShoppingCart.cshtml
@@ -15,7 +15,7 @@
 			                    <td class="csSubCell2"><div style="font-weight:bold;">
                                     <div style="float: right;">@cart.Product.Price</div>
                                     <div style="float: right;">£</div><div style="clear:both"></div></div></td>
-			                    <td class="minusCls csSubCell3"><input type="image" src="../../Content/Images/button-minus.gif"
+			                    <td class="minusCls csSubCell3"><input type="image" src="../../Content/Images/delete.gif"
                                     onclick="DeleteFromBasket(@cart.ProductId);" style="border-width:0px;"/></td>
 		                    </tr>
                         }
