--- a/Cuisine/Views/Account/Register.cshtml
+++ b/Cuisine/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model Mvc3ToolsUpdateWeb_Default.Models.RegisterModel
+﻿@*@model Mvc3ToolsUpdateWeb_Default.Models.RegisterModel
 
 @{
     ViewBag.Title = "Register";
@@ -59,3 +59,4 @@
         </fieldset>
     </div>
 }
+*@
