--- a/Cuisine/Views/Order/Index.cshtml
+++ b/Cuisine/Views/Order/Index.cshtml
@@ -120,21 +120,15 @@
                 <span id="ctl00_DesktopSideColumn_Basket_lblTxt">Your order</span>
             </h4>
     </div>
-    <div class="whiteMid style21Mid" id="divShoppingCard">
-       @* <div id="divBasketContent">
-            <input name="ctl00$DesktopSideColumn$Basket$hidValue" type="hidden" id="ctl00_DesktopSideColumn_Basket_hidValue">
-            <div class="BasketModalProductId">
-            <input type="hidden" name="ctl00$DesktopSideColumn$Basket$modalProductId" id="ctl00_DesktopSideColumn_Basket_modalProductId" value="2325666">
-            </div>*@
-                        	
-            @Html.Action("ViewBasket", "Order");
+    <div class="whiteMid style21Mid" id="divShoppingCard">                        	
+            @Html.Action("ViewBasket", "Order")
                             
              <br/>
             <div class="whiteBot style21Frame whiteBox">
                 <div class="botYellowImg">
                 </div>
             </div>
-            <div style="clear: both;">
+            <div style="clear: both">
             </div>
                         
     </div>
