--- a/Cuisine/Views/Order/Order.cshtml
+++ b/Cuisine/Views/Order/Order.cshtml
@@ -83,7 +83,7 @@
             @Html.ValidationMessageFor(model => model.Email)
         </div>
         <p>
-             <input type="submit" value="Order Now" class="csbtnImagegreen">
+             <input type="submit" value="Order Now" class="btn primary">
         </p>
     </fieldset>
 }
