--- a/Cuisine/Views/Order/ShoppingCart.cshtml
+++ b/Cuisine/Views/Order/ShoppingCart.cshtml
@@ -30,11 +30,10 @@
 			                <td colspan="3"><div class="minimumOrder"><p><strong>You need to spend £11 or more to order</strong></p></div></td>
 		                </tr>
 		                <tr align="left">
-			                <td colspan="3" style="padding-top:15px;">
-                            
+			                <td colspan="3" style="padding-top:15px">                            
                             <input type="submit" value="Order Now" 
-                            onclick="OrderCuisine();" 
-                            class="csbtnImagegreen">
+                            onclick="OrderCuisine()" 
+                            class="btn primary" />
                             </td>
 		                </tr>
 	                </tbody>
@@ -44,3 +43,4 @@
                 </div>
 
 </div>
+
