--- a/Cuisine/Views/Shared/_Layout.cshtml
+++ b/Cuisine/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 <a href="#"> <img src="../../Content/Images/mail.gif" alt="" /></a>
   </p>
 		<div id="logo">
-            <h1><a href="Home">
+            <h1><a href="/">
                     <img src="../../Content/Images/logo.jpg" alt="Earlyish" />
                 </a>
                 </h1>
