--- a/Cuisine/Views/Home/Index.cshtml
+++ b/Cuisine/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Cuisine.Models.Product>
+﻿@model IEnumerable<Cuisine.Models.Product>
 @{
     ViewBag.Title = "South Bridge Charcoal Grill- Halal";
 }
@@ -10,54 +10,40 @@
 <div id="slider">
     <div id="accordion-1">
         <dl>
-            <dt>First slide</dt>
-            <dd><h2>This is the first slide</h2><p><img src="../../Content/Images/monsters/img1.png" alt="Alt text to go here" />Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, enim.<br /><a href="#" class="more">Read more</a></p></dd>
-            <dt>Second slide</dt>
-            <dd><h2>Here is the second slide</h2><p><img src="../../Content/Images/monsters/img2.png" alt="Alt text to go here" />Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, enim.<br /><a href="#" class="more">Read more</a></p></dd>
-            <dt>One more slide</dt>
-            <dd><h2>One more slide to go here</h2><p><img src="../../Content/Images/monsters/img3.png" alt="Alt text to go here" />Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, enim.<br /><a href="#" class="more">Read more</a></p></dd>
-            <dt>Another slide</dt>
-            <dd><h2>Another slide to go here</h2><p><img src="../../Content/Images/monsters/img4.png" alt="Alt text to go here" />Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, enim.<br /><a href="#" class="more">Read more</a></p></dd>
-            <dt>Wow one more</dt>
-            <dd><h2>Unbilievable one more slide here</h2><p><img src="../../Content/Images/monsters/img5.png" alt="Alt text to go here" />Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, enim.<br /><a href="#" class="more">Read more</a></p></dd>
-                
+        @foreach (var item in Model)
+        {
+            <dt>@item.Name</dt>            
+            <dd>
+            <div style="float: left; width: 70%;">
+            <h2>@item.Description</h2>
+
+            </div>
+            <div style="float: right; width: 30%;">
+            <img src="../../Content/Images/images3.jpg" alt="@item.Name" />
+            <br />           
+            <h3>£@item.Price </h3>
+            <input type="submit" onclick ="AddDeal(@item.ProductId)" style="width:80px" value="Order" class="btn-primary"/>       
+            </div>            
+
+
+@*
+            <div>            
+            <h2>@item.Description</h2>
+            </div>
+            <div style="float:right">
+            <img src="../../Content/Images/images3.jpg" alt="@item.Name" />
+            </div>
+            <h3>£@item.Price </h3>
+            <br />
+            <a href = "#" onclick ="AddDeal(@item.ProductId)">Order</a>            
+*@            
+
+</dd>                        
+        }            
         </dl>
     </div>
 </div>
-
-<div class="left">
-			<h4>About the Company</h4>
-			<p><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ornare consequat tortor quis porttitor. Aliquam sed fringilla arcu. Maecenas sit amet cursus augue. Donec felis eros, luctus at blandit ac..<a href="#">Learn more</a></em></p>
-            
-@*<div class="right_block">
-            	<h2>Newsletter Sign up</h2>
-                <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit consequat.
-                </p>
-                <form id="newsletter">
-                <input type="text" name="" class="newsletter_input" />
-                <input type="submit" name="" class="newsletter_submit" value="Sign up" />
-                </form>
-            </div>*@
-            
-		</div>
-@*
-<div class="hero-unit">
-          <h1>Hello, world!</h1>
-          <p>Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-          <p><a class="btn primary large">Learn more »</a></p>
-        </div>
-        <!-- Example row of columns -->
-        <div class="row">
-                @foreach (var album in Model)
-                {
-                    <div class="span5">
-                        <h2>Heading</h2>
-                        <p><img alt="@album.Name" src="@album.ProductImageUrl" /></p>
-                        <p><a href="@Url.Action("Details", "Store",new { id = album.ProductId })"><span>@album.Name</span></a></p>   
-                    </div>  
-                }
-            </div>
-<h3><em>Fresh</em> off the grill</h3>*@
-
-
+<div>
+    <h4>About the Company</h4>
+    <p><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ornare consequat tortor quis porttitor. Aliquam sed fringilla arcu. Maecenas sit amet cursus augue. Donec felis eros, luctus at blandit ac..</em></p>
+</div>
