--- a/Cuisine/Views/Order/Index.cshtml
+++ b/Cuisine/Views/Order/Index.cshtml
@@ -11,134 +11,112 @@
         $("#tableProduct tbody tr even").addClass("prdLi2");
         $("#tableProduct tbody tr odd").addClass("prdLi1");
     });
+
+    $(document).scroll(function (event) {
+        var direction = scrollFunc(event);
+        $("#divShoppingCard").animate({ "top": "direction" + "=1px" }, "slow");
+    });
+
+    function scrollFunc(e) {
+        if (typeof scrollFunc.x == 'undefined') {
+            scrollFunc.x = window.pageXOffset;
+            scrollFunc.y = window.pageYOffset;
+        }
+        var diffX = scrollFunc.x - window.pageXOffset;
+        var diffY = scrollFunc.y - window.pageYOffset;
+
+        if (diffY < 0) {
+            return "-";
+        } else if (diffY > 0) {
+            return "+";
+        } else {
+            return "-";
+        }
+        scrollFunc.x = window.pageXOffset;
+        scrollFunc.y = window.pageYOffset;
+    }
 </script>
 
- <link href="../../Content/site.bundle.css" rel="stylesheet" type="text/css" />
-
-<div id="ProductOrderDiv" style="width: 900px; float: left; display: block;">
-   
-    <div style="margin-left: 5px; display: inline; width: 600px; float: left; position: relative;">
-        @*<div style="width: 600px; height: 1px; display: block;">
-		</div>*@
-	@*	<div class="redTop style16Frame">
-			<div class="topRedImg">
-			</div>
-		</div>*@
-
-		<div class="redMid style16Mid">
-			<h4>
-				<span id="ctl00_ContentPlaceHolder1_menucardtoptext">Menu</span></h4>
-		</div>
-		<div class="whiteMid style17Mid">
-            <table width="580" style="padding:0px 0px 0px 0px;margin-left:0px;">
-	        <tbody>
-            @foreach (var category in Model.Category)
-            { 
-                <tr>
-		            <td width="560" style="border:0px solid #000000;">
-                        <div style="margin-left:5px;">
-                            <h2 class="H2MC" id="5">@category.Name</h2>
-                            <b>Please note:</b> Extras will become available upon adding an item to your order.
-                        </div>
-                     </td>
-	            </tr>
-	            <tr>
-		            <td>
-                        <table width="580" border="0">
-			                <tbody>
-                                <tr>
-				                    <td width="375" style="border:0px solid #cccccc;"></td>
-				                    <td class="prdSpace"><span></span></td>
-				                    <td align="left" width="85" style="font-weight:bold;border:0px solid #cccccc;">
-                                        <span>Price</span>
-                                    </td>
-			                    </tr>
-		                    </tbody>
-                        </table>
-		            </td>
-	            </tr>
-                <tr>
-		            <td>
-                        <table id = "tableProduct" width="580" style="border:0px solid green;">
-					        <tbody>
-                                @foreach (var product in category.Products.AsEnumerable<Cuisine.Models.Product>())
-                                { 
-                                    
-                                    <tr width="580">
-						                <td rowspan="2" class="prdNo"><h6>@product.ProductId</h6></td>
-						                <td colspan="2" class="prdDe" rowspan="2"><h6>@product.Name</h6>
-                                        <div>@product.Description</div></td>
-						                <td class="prdAc">
-                                            @*<img src="/images/ikons/arrow-point.png" style="border-width:0px;">*@
-                                            <span>@{var size="";
-                                                      switch((Cuisine.Models.ProductSize)product.Size) {
-                                                      case Cuisine.Models.ProductSize.Large: {size = "Large";break;}
-                                                      case Cuisine.Models.ProductSize.Small: {size = "Small";break;}    
-                                                        }
-                                                  }
-                                                      @size.ToString() 
-                                                       </span></td>
-						               @* <td class="prdSpace"><span>A</span></td>*@
-						                <td class="prdPr">
-                                                <div style="float: right;">@product.Price</div>
-                                                <div style="float: right;">£</div>
-                                        </td>
-						                <td class="prdPlus">
-                                            <img alt="Click For Order" class="PlusMC" onclick="UpdateBasket(@product.ProductId);" src="../../Content/Images/button-plus.gif" style="border-width:0px;"/>
-                                        </td>
-					                </tr>
-                                    <tr></tr>
-                                }
-                            </tbody>
-                         </table>
-				    </td>
-			    </tr>
-    }
-    </tbody>
-    </table>
-
-    <div class="whiteBot style16Frame whiteBox">
-		        <div class="botYellowImg">
-		        </div>
-	        </div>
-	    <div style="clear: both;">
-	    </div>
-	    <div style="clear: both;">
-	    </div>  
-    </div>
-            
-        
-</div>
-
-<div style="float:right; width: 270px; ">
-   @* <div class="redTop style21Frame">
-        <div class="topRedImg">
+<div class="row">
+    <div id="ProductOrderDiv" class="span12">
+        <div class="span8">
+            <div>
+			    <h4>
+				    <span class="label label-info" style="font-size:14px">Menu</span>
+                </h4>
+		    </div>
+		    <div>
+                <table class="table-striped">
+	                <tbody>
+                        @foreach (var category in Model.Category)
+                        { 
+                            <tr>
+		                        <td>
+                                    <div>
+                                        <span class="label" style="font-size:12px">@category.Name</span>
+                                        <h6>Extras will become available upon adding an item to your order.</h6>
+                                    </div>
+                                </td>
+	                        </tr>
+                            <tr>
+		                        <td>
+                                    <table class="table table-striped table-bordered">
+					                    <tbody>
+                                            @foreach (var product in category.Products.AsEnumerable<Cuisine.Models.Product>())
+                                            { 
+                                                <tr>
+						                            <td rowspan="2">
+                                                        <div class="span1">
+                                                            <h5>@product.ProductId</h5>
+                                                        </div>
+                                                     </td>
+						                            <td colspan="2" rowspan="2">
+                                                        <div class="span5">
+                                                            <h5>@product.Name</h5>
+                                                            <h6>@product.Description</h6>
+                                                        </div>
+                                                    </td>
+						                            <td rowspan="2">
+                                                        <div class="span1">
+                                                            @{var size="";
+                                                                switch((Cuisine.Models.ProductSize)product.Size) {
+                                                                case Cuisine.Models.ProductSize.Large: {size = "Large";break;}
+                                                                case Cuisine.Models.ProductSize.Small: {size = "Small";break;}    
+                                                                }
+                                                            }
+                                                            <h5>@size.ToString()</h5>
+                                                         </div>
+                                                    </td>
+						                            <td rowspan="2">
+                                                        <div class="span1"><h5>£ @product.Price</h5></div>
+                                                    </td>
+						                            <td rowspan="2">
+                                                        <div class="span1">
+                                                            <img alt="Click For Order" onclick="UpdateBasket(@product.ProductId);" 
+                                                                src="../../Content/Images/button-plus.gif"/>
+                                                        </div>
+                                                    </td>
+					                            </tr>
+                                                <tr></tr>
+                                            }
+                                        </tbody>
+                                        </table>
+				                </td>
+			                </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>        
         </div>
-    </div>*@
-    <div class="redMid style20Mid">
-            <h4>
-                <span id="ctl00_DesktopSideColumn_Basket_lblTxt">Your order</span>
-            </h4>
-    </div>
-    <div class="whiteMid style21Mid" id="divShoppingCard">
-       @* <div id="divBasketContent">
-            <input name="ctl00$DesktopSideColumn$Basket$hidValue" type="hidden" id="ctl00_DesktopSideColumn_Basket_hidValue">
-            <div class="BasketModalProductId">
-            <input type="hidden" name="ctl00$DesktopSideColumn$Basket$modalProductId" id="ctl00_DesktopSideColumn_Basket_modalProductId" value="2325666">
-            </div>*@
-                        	
-            @Html.Action("ViewBasket", "Order");
-                            
-             <br/>
-            <div class="whiteBot style21Frame whiteBox">
-                <div class="botYellowImg">
+        <div class="span4 offset8" style="float:none;">
+            <div id="divShoppingCard" style="position:fixed;">
+                <div>
+                    <h4>
+                        <span class="label label-info" style="font-size:14px">Your order</span>
+                    </h4>
                 </div>
+                @Html.Action("ViewBasket", "Order")
             </div>
-            <div style="clear: both;">
-            </div>
-                        
+        </div>
     </div>
-                
-   
-</div>
 </div>
