admin product image upload

--- a/Cuisine/Areas/Admin/Views/Category/Delete.cshtml
+++ b/Cuisine/Areas/Admin/Views/Category/Delete.cshtml
@@ -2,6 +2,9 @@
 
 @{
     ViewBag.Title = "Delete";
+    Layout = "~/Areas/Admin/Views/Shared/AdminLayout.cshtml";
+    
+    
 }
 
 <h2>Delete</h2>
