--- a/Cuisine/Areas/Admin/Views/Category/Index.cshtml
+++ b/Cuisine/Areas/Admin/Views/Category/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<Cuisine.Models.Category>
 
-@{
+@{    
     ViewBag.Title = "Index";
+    Layout = "~/Areas/Admin/Views/Shared/AdminLayout.cshtml";
 }
 
 <h2>Index</h2>
