--- a/Cuisine/Areas/Admin/Views/Product/Create.cshtml
+++ b/Cuisine/Areas/Admin/Views/Product/Create.cshtml
@@ -2,14 +2,22 @@
 
 @{
     ViewBag.Title = "Create";
+    Layout = "~/Areas/Admin/Views/Shared/AdminLayout.cshtml";
+    
 }
 
 <h2>Create</h2>
 
+
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 
-@using (Html.BeginForm()) {
+@*@using (Html.BeginForm() ) {*@
+
+
+@using (Html.BeginForm("Create", "Product", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+
     @Html.ValidationSummary(true)
     <fieldset>
         <legend>Product</legend>
@@ -49,11 +57,11 @@
         <div class="editor-label">
             @Html.LabelFor(model => model.ProductImageUrl)
         </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.ProductImageUrl)
-            @Html.ValidationMessageFor(model => model.ProductImageUrl)
-        </div>
-
+       
+        <div class="editor-field">            
+        <input type="file" id="fileUpload" name="fileUpload"/>         
+        </div>              
+        
         <div class="editor-label">
             @Html.LabelFor(model => model.Size)
         </div>
