--- a/Cuisine/Areas/Admin/Views/Shared/AdminLayout.cshtml
+++ b/Cuisine/Areas/Admin/Views/Shared/AdminLayout.cshtml
@@ -7,17 +7,14 @@
     <script src="../../../../Scripts/Cuisine/Cuisine.js" type="text/javascript"></script>
     <script src="../../../../Scripts/jquery.blockUI.js" type="text/javascript"></script>
 
-	<link rel="stylesheet" type="text/css" href="../../../../Content/styles.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="../../../../Content/bootstrap.min.css" media="screen" />
 	<title>@ViewBag.Title</title>
 </head>
 <body>
 	<div id="content">
-		<p id="top">Contact us now <span class="phone">020 8681 1566</span> <a href="#"> <img src= "../../../../Content/Images/fb.gif" alt="" />  </a>
-<a href="#"> <img src="../../../../Content/Images/mail.gif" alt="" /></a>
-  </p>
+		
 		<div id="logo">
-            <h1><a href="/Admin">
-                    @*<img src="../../../../Content/Images/logo.jpg" alt="Earlyish" />*@
+            <h1><a href="/Admin">                    
                 </a>
                 </h1>
 		</div>
