--- a/Cuisine/Areas/Admin/Views/Product/Edit.cshtml
+++ b/Cuisine/Areas/Admin/Views/Product/Edit.cshtml
@@ -15,9 +15,15 @@
     <fieldset>
         <legend>Product</legend>
 
+         <div class="editor-label">
+            @Html.HiddenFor(model => model.ProductId)
+        </div>
+   
+
         <div class="editor-label">
             @Html.LabelFor(model => model.CategoryId, "Category")
         </div>
+
         <div class="editor-field">
             @Html.DropDownList("CategoryId", String.Empty)
             @Html.ValidationMessageFor(model => model.CategoryId)
@@ -50,10 +56,14 @@
         <div class="editor-label">
             @Html.LabelFor(model => model.ProductImageUrl)
         </div>
+
         <div class="editor-field">
-            @Html.EditorFor(model => model.ProductImageUrl)
-            @Html.ValidationMessageFor(model => model.ProductImageUrl)
+            @Html.HiddenFor(model => model.ProductImageUrl)            
         </div>
+
+        <div class="editor-field">            
+        <input type="file" id="fileUpload" name="fileUpload"/>         
+        </div> 
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Size)
