--- a/Cuisine/Views/Shared/_Layout.cshtml
+++ b/Cuisine/Views/Shared/_Layout.cshtml
@@ -68,6 +68,10 @@
 			<p class="right">&copy; 2011 - South Bridge Charcoal Grill &nbsp;</p>
 		</div>	
 @*	</div>*@
+
+<div id="footer">
+			<p>&copy; 2011 - South Bridge Charcoal Grill &nbsp;</p>
+</div>	
 </body>
 </html>
 
